--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,6 +5,6 @@
         This app was created by 
         <a href="https://twitter.com/MICHIHIROKAWAJI">Mr. Mitchy</a>
     </h2>
-    <a href="#" class="btn02 rotateback"><span>Sign up now!</span><span>はじめる</span></a>
+    <a href="/signup" class="btn02 rotateback"><span>Sign up now!</span><span>はじめる</span></a>
   </div>
 </div>
