--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,14 +8,16 @@
         <li><%= link_to "Contact", contact_path %></li>
 
         <% if logged_in? %>
-          <li><%= link_to "Users", '#' %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
               <li>
-                <%= link_to "Log out", logout_path, method: :delete %>
+                <%= link_to current_user.name +  " さん", current_user %>
+              </li>
+              <li>
+                <%= button_to "Log out", logout_path, method: :delete %>
               </li>
             </ul>
           </li>
