--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="signup_box" style="height:80vh; padding-top:20%;">
+<div class="signup_box" style="height:75vh; padding-top:10%;">
   <div class="center jumbotron" >
     <h1>Welcome to "Who are you?"!!!</h1>
     <h2>
@@ -6,5 +6,6 @@
         <a href="https://twitter.com/MICHIHIROKAWAJI">Mr. Mitchy</a>
     </h2>
     <a href="/signup" class="btn02 rotateback"><span>Sign up now!</span><span>はじめる</span></a>
+    <h2>アカウウントをお持ちの方は<a href="/login">こちら</a></h2>
   </div>
 </div>
